@@ -1,3 +1,14 @@
+2011-05-20  Pavel Podivilov  <podivilov@chromium.org>
+
+        Reviewed by Pavel Feldman.
+
+        Web Inspector: breakpoints disappear from ui after navigation.
+        https://bugs.webkit.org/show_bug.cgi?id=61133
+
+        * inspector/front-end/DebuggerPresentationModel.js:
+        (WebInspector.DebuggerPresentationModel.prototype._debuggerWasEnabled):
+        (WebInspector.DebuggerPresentationModel.prototype._saveBreakpoints):
+
 2011-05-20  Jer Noble  <jer.noble@apple.com>
 
         Reviewed by Maciej Stachowiak.
